python/stormm/dynamics.py

"""ctypes-based Python API for selected STORMM dynamics workflows.

Design notes for contributors:
- This module is intentionally thin.  It forwards work to compiled STORMM C++ code.
- All raw handles are opaque pointers created/destroyed by the bridge C API.
- We keep explicit argtypes/restype declarations to make failures deterministic.
"""

from __future__ import annotations

import ctypes
import os
import sys
from dataclasses import dataclass
from pathlib import Path
from typing import Dict, List, Optional, Sequence, Tuple, Union


class StormmError(RuntimeError):
  """Raised when the bridge reports an execution or validation error."""

  pass


def _shared_lib_extension() -> str:
  """Map platform name to shared-library suffix."""

  if sys.platform == "darwin":
    return ".dylib"
  if sys.platform.startswith("win"):
    return ".dll"
  return ".so"


def _candidate_bridge_paths() -> List[Path]:
  """Search order for the C bridge shared library.

  STORMM_PYBRIDGE can override the location, otherwise we check the common build path and
  package-local fallbacks.
  """

  ext = _shared_lib_extension()
  repo_root = Path(__file__).resolve().parents[2]
  env_override = os.environ.get("STORMM_PYBRIDGE")

  candidates: List[Path] = []
  if env_override:
    candidates.append(Path(env_override).expanduser())
  candidates.append(repo_root / "build" / f"libstormm_pybridge{ext}")
  candidates.append(repo_root / "build" / f"stormm_pybridge{ext}")
  candidates.append(Path(__file__).resolve().parent / f"libstormm_pybridge{ext}")
  candidates.append(Path(__file__).resolve().parent / f"stormm_pybridge{ext}")
  return candidates


def _load_library() -> ctypes.CDLL:
  """Load the compiled bridge library or fail with actionable diagnostics."""

  checked_paths: List[str] = []
  for candidate in _candidate_bridge_paths():
    checked_paths.append(str(candidate))
    if candidate.exists():
      return ctypes.CDLL(str(candidate))
  joined = "\n".join(checked_paths)
  raise StormmError(
      "Could not locate the STORMM Python bridge library.\n"
      "Build it with: cmake --build build --target stormm_pybridge\n"
      "Searched paths:\n" + joined
  )


_lib = _load_library()

# ------------------------------------------------------------------------------
# C ABI signatures
# ------------------------------------------------------------------------------
# Explicit signatures keep ctypes from making unsafe type assumptions.
_lib.stormm_get_last_error.restype = ctypes.c_char_p

_lib.stormm_state_variable_count.argtypes = []
_lib.stormm_state_variable_count.restype = ctypes.c_int
_lib.stormm_state_variable_name.argtypes = [ctypes.c_int]
_lib.stormm_state_variable_name.restype = ctypes.c_char_p

# AtomGraph constructor / query signatures.
_lib.stormm_atomgraph_create.argtypes = [ctypes.c_char_p]
_lib.stormm_atomgraph_create.restype = ctypes.c_void_p
_lib.stormm_atomgraph_destroy.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_destroy.restype = ctypes.c_int
_lib.stormm_atomgraph_get_atom_count.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_get_atom_count.restype = ctypes.c_int
_lib.stormm_atomgraph_get_residue_count.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_get_residue_count.restype = ctypes.c_int
_lib.stormm_atomgraph_get_total_mass.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_get_total_mass.restype = ctypes.c_double
_lib.stormm_atomgraph_get_atomic_masses.argtypes = [ctypes.c_void_p,
                                                     ctypes.POINTER(ctypes.c_double), ctypes.c_int]
_lib.stormm_atomgraph_get_atomic_masses.restype = ctypes.c_int

# PhaseSpace constructor / query signatures.
_lib.stormm_phasespace_create.argtypes = [ctypes.c_char_p, ctypes.c_void_p]
_lib.stormm_phasespace_create.restype = ctypes.c_void_p
_lib.stormm_phasespace_destroy.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_destroy.restype = ctypes.c_int
_lib.stormm_phasespace_get_atom_count.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_get_atom_count.restype = ctypes.c_int
_lib.stormm_phasespace_get_interlaced_coordinates.argtypes = [ctypes.c_void_p, ctypes.c_int,
                                                               ctypes.POINTER(ctypes.c_double),
                                                               ctypes.c_int]
_lib.stormm_phasespace_get_interlaced_coordinates.restype = ctypes.c_int
_lib.stormm_phasespace_export.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_double]
_lib.stormm_phasespace_export.restype = ctypes.c_int

# DynamicsControls mutator signatures.
_lib.stormm_dynamics_controls_create.argtypes = []
_lib.stormm_dynamics_controls_create.restype = ctypes.c_void_p
_lib.stormm_dynamics_controls_destroy.argtypes = [ctypes.c_void_p]
_lib.stormm_dynamics_controls_destroy.restype = ctypes.c_int
_lib.stormm_dynamics_controls_get_step_count.argtypes = [ctypes.c_void_p]
_lib.stormm_dynamics_controls_get_step_count.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_step_count.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_step_count.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_time_step.argtypes = [ctypes.c_void_p, ctypes.c_double]
_lib.stormm_dynamics_controls_set_time_step.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_diagnostic_frequency.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_diagnostic_frequency.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_trajectory_frequency.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_trajectory_frequency.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_com_purge_frequency.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_com_purge_frequency.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_thermostat_kind.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_thermostat_kind.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_temperature.argtypes = [ctypes.c_void_p, ctypes.c_double,
                                                          ctypes.c_double]
_lib.stormm_dynamics_controls_set_temperature.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_langevin_frequency.argtypes = [ctypes.c_void_p, ctypes.c_double]
_lib.stormm_dynamics_controls_set_langevin_frequency.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_andersen_frequency.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_andersen_frequency.restype = ctypes.c_int
_lib.stormm_dynamics_controls_set_seed.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_dynamics_controls_set_seed.restype = ctypes.c_int

# One-system dynamics execution signature.
_lib.stormm_dynamics_run.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_int,
                                     ctypes.c_double, ctypes.c_char_p, ctypes.c_char_p,
                                     ctypes.POINTER(ctypes.c_double),
                                     ctypes.POINTER(ctypes.c_double),
                                     ctypes.POINTER(ctypes.c_int),
                                     ctypes.POINTER(ctypes.c_double), ctypes.c_int]
_lib.stormm_dynamics_run.restype = ctypes.c_int

# AtomGraphSynthesis signatures.
_lib.stormm_atomgraph_synthesis_create.argtypes = [ctypes.POINTER(ctypes.c_void_p), ctypes.c_int]
_lib.stormm_atomgraph_synthesis_create.restype = ctypes.c_void_p
_lib.stormm_atomgraph_synthesis_destroy.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_synthesis_destroy.restype = ctypes.c_int
_lib.stormm_atomgraph_synthesis_get_system_count.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_synthesis_get_system_count.restype = ctypes.c_int
_lib.stormm_atomgraph_synthesis_get_unique_topology_count.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_synthesis_get_unique_topology_count.restype = ctypes.c_int
_lib.stormm_atomgraph_synthesis_get_atom_count.argtypes = [ctypes.c_void_p]
_lib.stormm_atomgraph_synthesis_get_atom_count.restype = ctypes.c_int
_lib.stormm_atomgraph_synthesis_get_atom_count_system.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_atomgraph_synthesis_get_atom_count_system.restype = ctypes.c_int

# PhaseSpaceSynthesis signatures.
_lib.stormm_phasespace_synthesis_create.argtypes = [ctypes.POINTER(ctypes.c_void_p),
                                                    ctypes.POINTER(ctypes.c_void_p), ctypes.c_int]
_lib.stormm_phasespace_synthesis_create.restype = ctypes.c_void_p
_lib.stormm_phasespace_synthesis_destroy.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_synthesis_destroy.restype = ctypes.c_int
_lib.stormm_phasespace_synthesis_get_system_count.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_synthesis_get_system_count.restype = ctypes.c_int
_lib.stormm_phasespace_synthesis_get_unique_topology_count.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_synthesis_get_unique_topology_count.restype = ctypes.c_int
_lib.stormm_phasespace_synthesis_get_padded_atom_count.argtypes = [ctypes.c_void_p]
_lib.stormm_phasespace_synthesis_get_padded_atom_count.restype = ctypes.c_int
_lib.stormm_phasespace_synthesis_get_atom_count.argtypes = [ctypes.c_void_p, ctypes.c_int]
_lib.stormm_phasespace_synthesis_get_atom_count.restype = ctypes.c_int
_lib.stormm_phasespace_synthesis_get_interlaced_coordinates.argtypes = [ctypes.c_void_p,
                                                                         ctypes.c_int, ctypes.c_int,
                                                                         ctypes.POINTER(ctypes.c_double),
                                                                         ctypes.c_int]
_lib.stormm_phasespace_synthesis_get_interlaced_coordinates.restype = ctypes.c_int


def _last_error_message() -> str:
  """Fetch the bridge's thread-local error string."""

  raw = _lib.stormm_get_last_error()
  if raw is None:
    return "Unknown STORMM error."
  return raw.decode("utf-8")


def _check_ptr(value: ctypes.c_void_p, context: str) -> ctypes.c_void_p:
  """Raise a Python exception when a creation call returns null."""

  if not value:
    raise StormmError(f"{context} failed: {_last_error_message()}")
  return ctypes.c_void_p(value)


def _check_rc(rc: int, context: str) -> int:
  """Raise a Python exception when a bridge call returns a negative code."""

  if rc < 0:
    raise StormmError(f"{context} failed: {_last_error_message()}")
  return rc


def _encode_optional_path(path: Optional[Union[str, Path]]) -> Optional[bytes]:
  """Normalize Python paths to absolute UTF-8 bytes for C calls."""

  if path is None:
    return None
  return str(Path(path).expanduser().resolve()).encode("utf-8")


_TRAJECTORY_KIND = {"positions": 0, "velocities": 1, "forces": 2}
_THERMOSTAT_KIND = {"none": 0, "andersen": 1, "langevin": 2, "berendsen": 3}


def _normalize_trajectory_kind(kind: str) -> int:
  """Validate and translate user-facing trajectory kind strings."""

  key = kind.lower().strip()
  if key not in _TRAJECTORY_KIND:
    raise ValueError(f"Unsupported trajectory kind '{kind}'.")
  return _TRAJECTORY_KIND[key]


def _normalize_thermostat_kind(kind: Union[str, int, None]) -> int:
  """Validate and translate thermostat selectors."""

  if kind is None:
    return -1
  if isinstance(kind, int):
    if kind < -1 or kind > 3:
      raise ValueError("Thermostat code must be -1, 0, 1, 2, or 3.")
    return kind
  key = kind.lower().strip()
  if key not in _THERMOSTAT_KIND:
    raise ValueError(f"Unsupported thermostat '{kind}'.")
  return _THERMOSTAT_KIND[key]


def state_variable_names() -> List[str]:
  """Return canonical STORMM state variable names in enum order."""
